# multimodal_tactile_sensor

./: CMakeLists.txt  README.md  package.xml  visu_sample.m
How_to_run_the_programs/: .~lock.Instructions to run demos with the real UR3 robot_and_icm_20789_data_collection_ros-data.doc#  .~lock.Instructions to run demos with the simulated UR3 robot_and_icm_20789_data_collection.doc#  Instructions to run demos with the real UR3 robot_and_icm_20789_data_collection.doc  Instructions to run demos with the real UR3 robot_and_icm_20789_data_collection_ros-data.doc  Instructions to run demos with the simulated UR3 robot_and_icm_20789_data_collection.doc
gesture_proximity_sensors/: CMakeLists.txt  package.xml
gesture_proximity_sensors/src/: gesture_proximity_sensors.cpp
gesture_proximity_sensors/src/apds_vl53l1x/: apds_vl53l1x.ino
gesture_proximity_sensors/src/apds_vl53l1x_icm/: apds_vl53l1x_icm.ino
gesture_proximity_sensors/src/vl53l1x/: vl53l1x.ino
hand_gesture_control/: CMakeLists.txt  README.md  package.xml
icm_tactile_sensor/: CMakeLists.txt  package.xml
icm_tactile_sensor_CNN/: CMakeLists.txt  package.xml
icm_tactile_sensor_air/: CMakeLists.txt  package.xml
icm_tactile_sensor_air/src/: icm_tactile_sensor_air.cpp
icm_tactile_sensor_air/src/gripper_pressure_sensor_ros/: gripper_pressure_sensor_ros.ino
icm_tactile_sensor_air/src/gyro-accel_pressure_i2c_v1_filter_ros_rev/: gyro-accel_pressure_i2c_v1_filter_ros_rev.ino
icm_tactile_sensor_air/src/gyro-accel_pressure_i2c_v1_filter_ros_rev2/: gyro-accel_pressure_i2c_v1_filter_ros_rev2.ino  icmDataMsg.h
(+46 files in other folders)
